# GuSTO.jl

./: .gitignore  .travis.yml  Manifest.toml  Project.toml  README.md  appveyor.yml
examples/: airplane.ipynb  astrobeeSE2.ipynb  astrobeeSE3.ipynb  astrobeeSE3manifold.ipynb  dubins_car.ipynb  freeflyerSE2.ipynb  manipulator_benchmark_gusto.ipynb  manipulator_benchmark_trajopt.ipynb  panda.ipynb  parse_file.jl  trajectory_data.txt
src/: GuSTO.jl  dynamics.jl  environment.jl  goals.jl  robot.jl  scp.jl  shooting.jl  traj_opt.jl  types.jl
src/dynamics/: airplane.jl  astrobee_se2.jl  astrobee_se3.jl  astrobee_se3_manifold.jl  astrobee_se3_manifold_vc.jl  blankdynamics.jl  doubleint_r2.jl  dubins_car.jl  freeflyer_se2.jl  init_feasible_sos.mat  init_straight_line_sos.mat  pandaKin.jl  panda_kinematics.jl  pandadynamics.jl  scratch.jl
src/dynamics/forward_kinematics/: H_pointing_constraint.jl  J_pointing_constraint.jl  (+18 more)
src/environment/: blankenv.jl  factory.jl  forest.jl  forest.mat  iss.jl  iss.mat  iss_corner.jl  iss_corner.mat  table.jl
src/old/: motion_planning.jl  planner_fmt_protobuf.proto  protobuf.ipynb  quat_data.txt  revise_tracking.jl  sampling.jl  symbolic_math.m
src/old/test/bullet_test/: CMakeCache.txt  CMakeLists.txt  Makefile  bt_test  cmake_install.cmake  hello_bullet.cpp
src/robot/: astrobee2D.jl  astrobee3D.jl  blankrobot.jl  car.jl  freeflyer.jl  pandaBot.jl  pandabot.jl  plane.jl  pointmassinsphere.jl
src/scp/: scp_gusto.jl  scp_mao.jl  scp_trajopt.jl
src/scripts/: symbolic_math.m
src/utils/: quat_functions.jl
test/: runtests.jl
(+80 files in other folders)
